2009-07-22  Gordon Williams <gordon.williams@collabora.co.uk>

	Changes to help with RGBA sapwood - disable alpha (transparency) 
	channel for apps and dialogs.

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Use set_allow_alpha
	  to disable alpha if libmatchbox doesn't believe the window has
	  alpha. 
	* matchbox/core/mb-wm-client.c: Intentionally don't allow transparency
	  for apps or dialogs.
	* debian/control: make dependent on the new clutter

2009-07-22  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.49

	Applied patch from Laszlo Pere for NB#123486.

	* matchbox/theme-engines/mb-wm-theme.[ch]: New functions
	mb_wm_theme_protect, mb_wm_theme_unprotect, mb_wm_theme_check_broken,
	mb_wm_theme_is_broken.
	* matchbox/core/mb-window-manager.c: Fallback to the default theme if
	we detected brokenness in the current theme.

2009-07-21  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-main-context.c
	(mb_wm_main_context_x_event_handler_remove): memset the list item with
	zeros before freeing it so that call_handlers_for_event can see that
	it's not valid anymore.

2009-07-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.48

	Revert Thomas' patch for NB#115408, we cannot have process-based
	stacking rules, it would never work...

	Patch from Artem for NB#126898.

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_restack_real): Don't restack if
	MBWMCompMgrClutterClientDontShow is set.

2009-07-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#128595 [RGBA GTK+/sapwood] modalblocker popping up without
		  a dialog locks the UI
	NB#128661 [RGBA GTK+/sapwood] Application windows not mapped,
		  only titlebar visible.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
	  Don't fail with the frame window creation if the client is argb32.

2009-07-17  Aapo Kojo  <aapo.kojo@nokia.com>

	Release 0.2.47

2009-07-17  Thomas Thurman  <thomas.thurman@collabora.co.uk>
