@@ -1,3 +1,12 @@
+2009-07-23  Gordon Williams <gordon.williams@collabora.co.uk>
+
+	* matchbox/core/mb-wm-types.h
+        * matchbox/core/mb-wm-atoms.c
+	* matchbox/core/mb-wm-client.c: For RGBA sapwood - look for 
+	MAEMO_IGNORE_ALPHA window property, and only ignore alpha if so.
+	Reverts previous change in order to handle alpha in a more compatible
+	way.
+
 2009-07-22  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	Changes to help with RGBA sapwood - disable alpha (transparency) 
